# acels

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  asd.py  check_gpu.py  check_gpus.py  plotting.py  printing.py  pylint.rc  pyproject.toml  test_position_detection_implementation.py
.github/workflows/: checks.yml  format.yml
acels/: benchmarck_control_impl.py  benchmark_implementation.py  benchmark_matrix_trans_impl.py  benchmark_model_impl.py  calc_mean_runtime.py  create_impl_testing_coordinates.py  data_analysis.py  format_input_data.py  full_design_output_141.csv  full_design_output_150.csv  full_design_output_24.csv  full_design_output_524.csv  full_design_output_554.csv  full_design_output_587.csv  full_design_output_595.csv  full_design_output_597.csv  full_design_output_78.csv  full_design_output_80.csv  full_design_output_86.csv  matrix_tranformation.py  matrix_transformation.m  matrix_transformation.py  no_quantized_predictions.csv  output_coordinates.csv  plotting.py  position_data_float_xyz_extended.csv  position_detection_model.ipynb  position_detection_nn.py  precompute_matrix_transfrom_elements.py  predicted_coordinates.csv  process_dataset.py  quantized_implementation_output.csv  quantized_predictions.csv  r_z_data_1A.csv  test_coordinates.csv
acels/analysis/: extended_150_mae_non_quant_models.csv  extended_150_mae_non_quant_models.xlsx  fastest_quant_models.txt  (+35 more)
tests/: dummy_training_data.csv  expected_dummy_predictions.csv  test_benchmarking.py  test_data_analysis.py  test_matrix_transform.py  test_position_detection_nn.py
(+2621 files in other folders)
